--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/react": "18.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1"
